compiler/testData/diagnostics/quick/regressions/CoercionToUnit.jet
fun foo(<!UNUSED_PARAMETER!>u<!> : Unit) : Int = 1

fun test() : Int {
    foo(<!TYPE_MISMATCH!>1<!>)
    val <!UNUSED_VARIABLE!>a<!> : fun() : Unit = {
        foo(<!TYPE_MISMATCH!>1<!>)
    }
    return 1
}